--- a/example/self_instructed_ft/demo_self_instruct_ft.ipynb
+++ b/example/self_instructed_ft/demo_self_instruct_ft.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ac5e42cf",
    "metadata": {},
    "outputs": [
@@ -272,11 +272,6 @@
        "      <td>What is the author's opinion on defending oneself?[Page 1]</td>\n",
        "      <td>The author believes that it's better most of the time not to defend oneself, as counterintuitive as it may feel. He argues that people who attack others are literally taking their lives.</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>What is the main idea of the passage?[Page 2]</td>\n",
-       "      <td>The main idea of the passage is to relentlessly prune bullshit, prioritize doing things that matter, and savor the time you have. This is because life is short.</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -288,18 +283,16 @@
        "2                Does knowing that life is short make a difference to the author?[Page 0]   \n",
        "3             What kinds of activities does the author consider to be \"bullshit\"?[Page 0]   \n",
        "4                              What is the author's opinion on defending oneself?[Page 1]   \n",
-       "5                                           What is the main idea of the passage?[Page 2]   \n",
        "\n",
        "                                                                                                                                                                                                                                                                                                        Answer  \n",
        "0                                                                                                                                                                                                                                                                      The author believes that life is short.  \n",
        "1                          Having children made the author realize that life is indeed short because it helped them convert time into discrete quantities. They were able to count the number of weekends spent with their child and the number of times they experienced certain events like Christmas magic.  \n",
        "2  Yes, knowing that life is short makes a big difference to the author. It gives greater weight to arguments such as \"Life is too short for X\". It also helps the author identify things that are unnecessary and wasteful, which they refer to as \"bullshit\", and eliminating those things from their lives.  \n",
        "3               The author considers activities such as unnecessary meetings, pointless disputes, bureaucracy, posturing, dealing with other people's mistakes, traffic jams, and addictive but unrewarding pastimes to be \"bullshit\". These activities either get forced upon us or trick us into doing them.  \n",
-       "4                                                                                                                   The author believes that it's better most of the time not to defend oneself, as counterintuitive as it may feel. He argues that people who attack others are literally taking their lives.  \n",
-       "5                                                                                                                                             The main idea of the passage is to relentlessly prune bullshit, prioritize doing things that matter, and savor the time you have. This is because life is short.  "
+       "4                                                                                                                   The author believes that it's better most of the time not to defend oneself, as counterintuitive as it may feel. He argues that people who attack others are literally taking their lives.  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,8 +301,8 @@
     "# Set this option to None to display full contents of each column\n",
     "pd.set_option('display.max_colwidth', None)\n",
     "\n",
-    "# print the first 50 entries in the generated question-answer pairs.\n",
-    "output_dict[OUTPUT_NAME][0][QAPAIR_DF_KEY][:50]"
+    "# print the first 5 entries in the generated question-answer pairs.\n",
+    "output_dict[OUTPUT_NAME][0][QAPAIR_DF_KEY][:5]"
    ]
   }
  ],
