--- a/example/qa_generation/data_generation_text.ipynb
+++ b/example/qa_generation/data_generation_text.ipynb
@@ -5,7 +5,7 @@
    "id": "6f370f8d-754e-4122-83e1-ba76aa1f0ca6",
    "metadata": {},
    "source": [
-    "# Example of generating QAs from a text file\n",
+    "# Example of generating QAs from an ML book (using LMGQ)\n",
     "\n",
     "### Import packages"
    ]
