--- a/example/self_instructed_ft/demo_self_instruct_ft.ipynb
+++ b/example/self_instructed_ft/demo_self_instruct_ft.ipynb
@@ -5,7 +5,7 @@
    "id": "7cbc4c4a",
    "metadata": {},
    "source": [
-    "# Example of generating self-instruct dataset for an ML book\n",
+    "# Example of generating QAs for an ML book (using self-instruct)\n",
     "Source: https://d2l.ai/chapter_appendix-mathematics-for-deep-learning/information-theory.html\n",
     "\n",
     "### Load packages"
