--- a/example/self_instructed_ft/demo_self_instruct_ft.ipynb
+++ b/example/self_instructed_ft/demo_self_instruct_ft.ipynb
@@ -64,7 +64,7 @@
    "id": "4b177df1",
    "metadata": {},
    "source": [
-    "Set current diretory and input data directory."
+    "Set current directory and input data directory."
    ]
   },
   {
