--- a/example/model/model.ipynb
+++ b/example/model/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -42,16 +42,16 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from dotenv import load_dotenv\n",
-    "from uniflow.flow.model_flow import ModelFlow\n",
-    "\n",
     "from IPython.display import display\n",
+    "\n",
+    "from uniflow.client import Client\n",
     "from uniflow.viz import Viz\n",
     "\n",
     "load_dotenv()"
@@ -66,11 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\n",
+    "data = [{\n",
     "    \"instruction\": \"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\"\"\",\n",
     "    \"examples\": [\n",
     "        {\n",
@@ -89,48 +89,78 @@
     "            \"answer\": \"\"\"\"\"\",\n",
     "        }\n",
     "    ],\n",
-    "}\n"
+    "},\n",
+    "        {\n",
+    "    \"instruction\": \"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\"\"\",\n",
+    "    \"examples\": [\n",
+    "        {\n",
+    "            \"context\": \"\"\"The quick brown fox jumps over the lazy dog.\"\"\",\n",
+    "            \"question\": \"\"\"What is the color of the fox?\"\"\",\n",
+    "            \"answer\": \"\"\"brown.\"\"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"context\": \"\"\"The quick brown fox jumps over the lazy black dog.\"\"\",\n",
+    "            \"question\": \"\"\"What is the color of the dog?\"\"\",\n",
+    "            \"answer\": \"\"\"black.\"\"\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"context\": \"\"\"My name is bobby and I am a talent software engineer working on AI/ML.\"\"\",\n",
+    "            \"question\": \"\"\"\"\"\",\n",
+    "            \"answer\": \"\"\"\"\"\",\n",
+    "        }\n",
+    "    ],\n",
+    "}]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_flow = ModelFlow()"
+    "client = Client(\"ModelFlow\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = model_flow(data)"
+    "output = client.run(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'output': [[{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "    'question': 'What color was the sky on the sunny day?',\n",
-       "    'answer': 'blue.'},\n",
-       "   {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "    'question': 'What was the color of the sky?',\n",
-       "    'answer': 'blue.'},\n",
-       "   {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "    'question': 'What color was the sky?',\n",
-       "    'answer': 'blue.'}]],\n",
-       " 'root': <uniflow.node.node.Node at 0x10d126680>}"
+       "[{'output': [[{'context': 'It was a sunny day and the sky color is blue.',\n",
+       "     'question': 'What was the color of the sky?',\n",
+       "     'answer': 'blue.'},\n",
+       "    {'context': 'It was a sunny day and the sky color is blue.',\n",
+       "     'question': 'What color was the sky on a sunny day?',\n",
+       "     'answer': 'blue.'},\n",
+       "    {'context': 'It was a sunny day and the sky color is blue.',\n",
+       "     'question': 'What color is the sky?',\n",
+       "     'answer': 'blue.'}]],\n",
+       "  'root': <uniflow.node.node.Node at 0x1053615d0>},\n",
+       " {'output': [[{'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
+       "     'question': \"What is Bobby's occupation?\",\n",
+       "     'answer': 'software engineer working on AI/ML.'},\n",
+       "    {'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
+       "     'question': 'What is your profession?',\n",
+       "     'answer': 'I am a talented software engineer working on AI/ML.'},\n",
+       "    {'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
+       "     'question': \"What is bobby's occupation?\",\n",
+       "     'answer': 'talent software engineer working on AI/ML.'}]],\n",
+       "  'root': <uniflow.node.node.Node at 0x105360c40>}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = Viz.to_digraph(output['root'])"
+    "graph = Viz.to_digraph(output[0]['root'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -169,33 +199,93 @@
        "<!-- Generated by graphviz version 9.0.0 (20230911.1827)\n",
        " -->\n",
        "<!-- Pages: 1 -->\n",
-       "<svg width=\"123pt\" height=\"116pt\"\n",
-       " viewBox=\"0.00 0.00 122.99 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<svg width=\"193pt\" height=\"116pt\"\n",
+       " viewBox=\"0.00 0.00 192.59 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 112)\">\n",
-       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-112 118.99,-112 118.99,4 -4,4\"/>\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-112 188.59,-112 188.59,4 -4,4\"/>\n",
        "<!-- root -->\n",
        "<g id=\"node1\" class=\"node\">\n",
        "<title>root</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"57.49\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"57.49\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.3\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"92.3\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
        "</g>\n",
-       "<!-- model_op_1 -->\n",
+       "<!-- thread_0/model_op_1 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>model_op_1</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"57.49\" cy=\"-18\" rx=\"57.49\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"57.49\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">model_op_1</text>\n",
+       "<title>thread_0/model_op_1</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.3\" cy=\"-18\" rx=\"92.3\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"92.3\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/model_op_1</text>\n",
        "</g>\n",
-       "<!-- root&#45;&gt;model_op_1 -->\n",
+       "<!-- root&#45;&gt;thread_0/model_op_1 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;model_op_1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M57.49,-71.7C57.49,-64.41 57.49,-55.73 57.49,-47.54\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"60.99,-47.62 57.49,-37.62 53.99,-47.62 60.99,-47.62\"/>\n",
+       "<title>root&#45;&gt;thread_0/model_op_1</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M92.3,-71.7C92.3,-64.41 92.3,-55.73 92.3,-47.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"95.8,-47.62 92.3,-37.62 88.8,-47.62 95.8,-47.62\"/>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x105907250>"
+       "<graphviz.graphs.Digraph at 0x104006d10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = Viz.to_digraph(output[1]['root'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 9.0.0 (20230911.1827)\n",
+       " -->\n",
+       "<!-- Pages: 1 -->\n",
+       "<svg width=\"193pt\" height=\"116pt\"\n",
+       " viewBox=\"0.00 0.00 192.59 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 112)\">\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-112 188.59,-112 188.59,4 -4,4\"/>\n",
+       "<!-- root -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>root</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.3\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"92.3\" y=\"-84.95\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
+       "</g>\n",
+       "<!-- thread_1/model_op_1 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>thread_1/model_op_1</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"92.3\" cy=\"-18\" rx=\"92.3\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"92.3\" y=\"-12.95\" font-family=\"Times,serif\" font-size=\"14.00\">thread_1/model_op_1</text>\n",
+       "</g>\n",
+       "<!-- root&#45;&gt;thread_1/model_op_1 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>root&#45;&gt;thread_1/model_op_1</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M92.3,-71.7C92.3,-64.41 92.3,-55.73 92.3,-47.54\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"95.8,-47.62 92.3,-37.62 88.8,-47.62 95.8,-47.62\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.graphs.Digraph at 0x104006f50>"
       ]
      },
      "metadata": {},
