add openai json response flow. However, it is not very stable and might due to bug

--- a/example/model/model.ipynb
+++ b/example/model/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,9 +52,37 @@
     "from IPython.display import display\n",
     "\n",
     "from uniflow.client import Client\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.viz import Viz\n",
     "\n",
     "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LinearFlow',\n",
+       " 'ModelFlow',\n",
+       " 'OpenAIJsonModelFlow',\n",
+       " 'DataGenFlow',\n",
+       " 'DataGenTextFlow',\n",
+       " 'TextPlusDataGenFlow',\n",
+       " 'SelfInstructedGenFlow',\n",
+       " 'PDFSelfInstructedGenFlow']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FlowFactory.list()"
    ]
   },
   {
@@ -66,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,35 +160,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'output': [[{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "     'question': 'What was the color of the sky?',\n",
+       "     'question': 'What is the color of the sky?',\n",
        "     'answer': 'blue.'},\n",
        "    {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "     'question': 'What color was the sky on a sunny day?',\n",
+       "     'question': 'What color was the sky on that sunny day?',\n",
        "     'answer': 'blue.'},\n",
        "    {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "     'question': 'What color is the sky?',\n",
+       "     'question': 'What color was the sky?',\n",
        "     'answer': 'blue.'}]],\n",
-       "  'root': <uniflow.node.node.Node at 0x1053615d0>},\n",
+       "  'root': <uniflow.node.node.Node at 0x2860d60b0>},\n",
        " {'output': [[{'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
-       "     'question': \"What is Bobby's occupation?\",\n",
+       "     'question': \"What is Bobby's profession?\",\n",
        "     'answer': 'software engineer working on AI/ML.'},\n",
-       "    {'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
-       "     'question': 'What is your profession?',\n",
-       "     'answer': 'I am a talented software engineer working on AI/ML.'},\n",
-       "    {'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
-       "     'question': \"What is bobby's occupation?\",\n",
-       "     'answer': 'talent software engineer working on AI/ML.'}]],\n",
-       "  'root': <uniflow.node.node.Node at 0x105360c40>}]"
+       "    {'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
+       "     'question': 'What type of software engineer is Bobby?',\n",
+       "     'answer': 'talented software engineer.'},\n",
+       "    {'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
+       "     'question': 'What field of technology do you specialize in as a software engineer?',\n",
+       "     'answer': 'AI/ML.'}]],\n",
+       "  'root': <uniflow.node.node.Node at 0x2860d7a30>}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +253,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x104006d10>"
+       "<graphviz.graphs.Digraph at 0x103e3c8e0>"
       ]
      },
      "metadata": {},
@@ -238,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +313,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x104006f50>"
+       "<graphviz.graphs.Digraph at 0x103e3d480>"
       ]
      },
      "metadata": {},
@@ -295,6 +323,13 @@
    "source": [
     "display(graph)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
