update model class _deserialize return from list to dict and update notebook

--- a/example/model/model.ipynb
+++ b/example/model/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,16 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Since the GPL-licensed package `unidecode` is not installed, using Python's `unicodedata` package which yields worse results.\n",
+      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +85,7 @@
        " 'PDFSelfInstructedGenFlow']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,41 +169,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'output': [[{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "     'question': 'What is the color of the sky?',\n",
-       "     'answer': 'blue.'},\n",
-       "    {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "     'question': 'What color was the sky on that sunny day?',\n",
-       "     'answer': 'blue.'},\n",
-       "    {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "     'question': 'What color was the sky?',\n",
-       "     'answer': 'blue.'}]],\n",
-       "  'root': <uniflow.node.node.Node at 0x2860d60b0>},\n",
-       " {'output': [[{'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
-       "     'question': \"What is Bobby's profession?\",\n",
-       "     'answer': 'software engineer working on AI/ML.'},\n",
-       "    {'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
-       "     'question': 'What type of software engineer is Bobby?',\n",
-       "     'answer': 'talented software engineer.'},\n",
-       "    {'context': 'My name is bobby and I am a talented software engineer working on AI/ML.',\n",
-       "     'question': 'What field of technology do you specialize in as a software engineer?',\n",
-       "     'answer': 'AI/ML.'}]],\n",
-       "  'root': <uniflow.node.node.Node at 0x2860d7a30>}]"
+       "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
+       "   'question': 'What color was the sky?',\n",
+       "   'answer': 'blue.'},\n",
+       "  {'context': 'It was a sunny day and the sky color is blue.',\n",
+       "   'question': 'What is the color of the sky?',\n",
+       "   'answer': 'blue.'},\n",
+       "  {'context': 'It was a sunny day and the sky color is blue.',\n",
+       "   'question': 'What is the color of the sky?',\n",
+       "   'answer': 'blue.'}]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output"
+    "output[0]['output'][0]"
    ]
   },
   {
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +251,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x103e3c8e0>"
+       "<graphviz.graphs.Digraph at 0x10683d3c0>"
       ]
      },
      "metadata": {},
@@ -266,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +311,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x103e3d480>"
+       "<graphviz.graphs.Digraph at 0x10683fc10>"
       ]
      },
      "metadata": {},
