--- a/example/model/openai_json_model.ipynb
+++ b/example/model/openai_json_model.ipynb
@@ -160,11 +160,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -175,24 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "  'question': 'What was the weather like today?',\n",
-       "  'answer': 'It was a sunny day.'},\n",
-       " {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "  'question': 'What type of weather was it and what color is the sky?',\n",
-       "  'answer': 'It was sunny and the color of the sky was blue.'},\n",
-       " {'context': 'It was a sunny day and the sky color is blue.',\n",
-       "  'question': 'What was the weather like and what color was the sky?',\n",
-       "  'answer': 'The weather was sunny and the sky color was blue.'}]"
+       "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
+       "   'question': 'What was the weather like and what color was the sky?',\n",
+       "   'answer': 'The weather was sunny and the sky was blue.'},\n",
+       "  {'context': 'It was a sunny day and the sky color is blue.',\n",
+       "   'question': 'What color is the sky on a sunny day?',\n",
+       "   'answer': 'Blue'},\n",
+       "  {'context': 'It was a sunny day and the sky color is blue.',\n",
+       "   'question': 'What color is the sky on a sunny day?',\n",
+       "   'answer': 'The sky color is blue on a sunny day.'}]}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +252,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10a83fd30>"
+       "<graphviz.graphs.Digraph at 0x11b03c340>"
       ]
      },
      "metadata": {},
@@ -270,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +312,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10a83ff70>"
+       "<graphviz.graphs.Digraph at 0x11b03fb80>"
       ]
      },
      "metadata": {},
@@ -327,6 +322,13 @@
    "source": [
     "display(graph)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
