update ipynb flow name and update openai to latest api interface

--- a/example/qa_generation/data_generation.ipynb
+++ b/example/qa_generation/data_generation.ipynb
@@ -24,7 +24,7 @@
     "import uniflow.config as config\n",
     "\n",
     "# Initiate flow\n",
-    "client = Client(\"flow_data_gen\")\n",
+    "client = Client(\"DataGenFlow\")\n",
     "# Load data\n",
     "fname = \"qd_immigration_short.csv\" #only the first 3 rows of qd_immigration\n",
     "dir_cur = os.getcwd()\n",
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client2 = Client(\"flow_data_gen\")\n",
+    "client2 = Client(\"DataGenFlow\")\n",
     "# Load data\n",
     "fname = \"qd_immigration.csv\" #the full qd_immigration file\n",
     "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", fname)\n",
