--- a/example/qa_generation/data_generation_text.ipynb
+++ b/example/qa_generation/data_generation_text.ipynb
@@ -834,7 +834,7 @@
     }
    ],
    "source": [
-    "client = Client(\"flow_data_gen_text\")\n",
+    "client = Client(\"DataGenTextFlow\")\n",
     "input_dict = {INPUT_FILE: input_file}\n",
     "input_list = [input_dict]\n",
     "output_list = client.run(input_list)\n",
