--- a/example/qa_generation/text_plus_data_generation.ipynb
+++ b/example/qa_generation/text_plus_data_generation.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(\"flow_text_plus_data_gen\")\n",
+    "client = Client(\"TextPlusDataGenFlow\")\n",
     "input_dict = {INPUT_FILE: input_file}\n",
     "input_list = [input_dict]\n",
     "output_list = client.run(input_list)\n",
