--- a/example/self_instructed_ft/demo_self_instruct_ft.ipynb
+++ b/example/self_instructed_ft/demo_self_instruct_ft.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "\n",
     "# Initiate flow\n",
-    "client = Client(\"flow_self_instructed_gen\")\n",
+    "client = Client(\"SelfInstructedGenFlow\")\n",
     "\n",
     "# Run flow\n",
     "input_dict = {INPUT_FILE: input_file}\n",
